--- a/content/3dicons-meta/3d.md
+++ b/content/3dicons-meta/3d.md
@@ -1,10 +1,10 @@
 ---
 id: 2
-title: 3d 
+title: 3d
 file-slug: 3d
 date: Oct 03, 2021 20:34:23
 feature: false
-category: icons
+category: a
 angle: dynamic
 clay: https://3dicons.sgp1.cdn.digitaloceanspaces.com/v1/dynamic/clay/3d-dynamic-clay.png
 gradient: https://3dicons.sgp1.cdn.digitaloceanspaces.com/v1/dynamic/gradient/3d-dynamic-gradient.png
